# zed-gt-extension

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  extension.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-gt.pc.in
bindings/c/tree_sitter/: tree-sitter-gt.h
bindings/rust/: build.rs  lib.rs
grammars/: gt.wasm
grammars/tree-sitter-gt/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
grammars/tree-sitter-gt/bindings/node/: binding.cc  index.js
grammars/tree-sitter-gt/bindings/rust/: lib.rs
grammars/tree-sitter-gt/src/: grammar.json  node-types.json  parser.c
languages/gt/: config.toml  highlights.scm
src/: grammar.json  node-types.json  parser.c
