[package]
name = "tree-sitter-gt"
description = "Gt grammar for tree-sitter"
version = "0.1.0"
authors = ["marsgpl <marsgpl@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gt"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/marsgpl/zed-gt-extension"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
